clusters/dev/banterbus/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banterbus
spec:
  template:
    spec:
      containers:
        - name: banterbus
