clusters/dev/banterbus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banterbus
  namespace: dev
  label:
     team: frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: banterbus
  ports:
    - protocol: TCP
      port: 8080
