clusters/dev/banterbus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banterbus
  namespace: dev
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: banterbus.games
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banterbus
                port:
                  number: 8080
  tls:
    - hosts:
        - banterbus.games
      secretName: banterbus-games-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: banterbus-ingress
  namespace: dev
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: banterbus
